test/functions/typeMethods/arg-type-type-method.good
arg-type-type-method.chpl:16: warning: test RR.typemeth
arg-type-type-method.chpl:17: warning: test CC.typemeth
arg-type-type-method.chpl:18: error: success
