test/functions/typeMethods/arg-type-type-method.bad
arg-type-type-method.chpl:12: In function 'test':
arg-type-type-method.chpl:12: error: '.' undeclared (first use this function)
